// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can handle broken drawer (without end) 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "actionable": false,
          "children": Array [
            Object {
              "level": 1,
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
                "start": Object {
                  "column": 1,
                  "line": 1,
                },
              },
              "type": "stars",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 11,
                  "line": 1,
                  "offset": 10,
                },
                "start": Object {
                  "column": 3,
                  "line": 1,
                  "offset": 2,
                },
              },
              "type": "text.plain",
              "value": "headline",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 1,
                  "line": 2,
                  "offset": 11,
                },
                "start": Object {
                  "column": 11,
                  "line": 1,
                  "offset": 10,
                },
              },
              "type": "newline",
            },
          ],
          "content": "headline",
          "level": 1,
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 1,
              "line": 2,
              "offset": 11,
            },
            "start": Object {
              "column": 1,
              "line": 1,
            },
          },
          "type": "headline",
        },
        Object {
          "attributes": Object {},
          "children": Array [
            Object {
              "name": "PROPERTIES",
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 13,
                  "line": 2,
                  "offset": 23,
                },
                "start": Object {
                  "column": 1,
                  "line": 2,
                  "offset": 11,
                },
              },
              "type": "text.plain",
              "value": ":PROPERTIES:",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 1,
                  "line": 3,
                  "offset": 24,
                },
                "start": Object {
                  "column": 13,
                  "line": 2,
                  "offset": 23,
                },
              },
              "type": "text.plain",
              "value": " ",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 11,
                  "line": 3,
                  "offset": 34,
                },
                "start": Object {
                  "column": 1,
                  "line": 3,
                  "offset": 24,
                },
              },
              "type": "text.plain",
              "value": "key: value",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 1,
                  "line": 4,
                  "offset": 35,
                },
                "start": Object {
                  "column": 11,
                  "line": 3,
                  "offset": 34,
                },
              },
              "type": "text.plain",
              "value": " ",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 11,
                  "line": 4,
                  "offset": 45,
                },
                "start": Object {
                  "column": 1,
                  "line": 4,
                  "offset": 35,
                },
              },
              "type": "text.plain",
              "value": "key: value",
            },
          ],
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 1,
              "line": 6,
              "offset": 47,
            },
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 11,
            },
          },
          "type": "paragraph",
        },
        Object {
          "attributes": Object {},
          "children": Array [
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 10,
                  "line": 6,
                  "offset": 56,
                },
                "start": Object {
                  "column": 1,
                  "line": 6,
                  "offset": 47,
                },
              },
              "type": "text.plain",
              "value": "Paragraph",
            },
          ],
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 10,
              "line": 6,
              "offset": 56,
            },
            "start": Object {
              "column": 1,
              "line": 6,
              "offset": 47,
            },
          },
          "type": "paragraph",
        },
      ],
      "level": 1,
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 10,
          "line": 6,
          "offset": 56,
        },
        "start": Object {
          "column": 1,
          "line": 1,
        },
      },
      "properties": Object {},
      "type": "section",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 10,
      "line": 6,
      "offset": 56,
    },
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "properties": Object {},
  "type": "document",
}
`;

exports[`can parse normal drawer 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "actionable": false,
          "children": Array [
            Object {
              "level": 1,
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
                "start": Object {
                  "column": 1,
                  "line": 1,
                },
              },
              "type": "stars",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 11,
                  "line": 1,
                  "offset": 10,
                },
                "start": Object {
                  "column": 3,
                  "line": 1,
                  "offset": 2,
                },
              },
              "type": "text.plain",
              "value": "headline",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 1,
                  "line": 2,
                  "offset": 11,
                },
                "start": Object {
                  "column": 11,
                  "line": 1,
                  "offset": 10,
                },
              },
              "type": "newline",
            },
          ],
          "content": "headline",
          "level": 1,
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 1,
              "line": 2,
              "offset": 11,
            },
            "start": Object {
              "column": 1,
              "line": 1,
            },
          },
          "type": "headline",
        },
        Object {
          "name": "PROPERTIES",
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 6,
              "line": 5,
              "offset": 57,
            },
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 11,
            },
          },
          "type": "drawer",
          "value": "key1: value 1
key2: value 2",
        },
      ],
      "level": 1,
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 6,
          "line": 5,
          "offset": 57,
        },
        "start": Object {
          "column": 1,
          "line": 1,
        },
      },
      "properties": Object {},
      "type": "section",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 6,
      "line": 5,
      "offset": 57,
    },
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "properties": Object {},
  "type": "document",
}
`;
